--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Python application
 
 on:
   push:
-    branches: [ main ]
+    branches: [ python-ci-workflow ]
   pull_request:
-    branches: [ main ]
+    branches: [ python-ci-workflow ]
 
 jobs:
   build:
@@ -17,3 +17,11 @@ jobs:
         python-version: "3.8"
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
+    - name: Build & push Docker image
+      user: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: yoonjjan/github-actions-project
+        tags: v2, latest
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
