--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -4,19 +4,20 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
       - uses: iterative/setup-cml@v1
       - name: Train model
         env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_TOKEN: ${{ secrets.CML_GITHUB_ACCESS_TOKEN }}
         run: |
           pip install -r requirements.txt
           python train.py
+      - name: Write CML report
+        run: |
           echo "## MODEL METRICS" > report.md
           cat metrics.txt >> report.md
-
           echo "## Data viz" >> report.md
-          cml-publish feature_importance.png --md >> report.md
-          cml-publish residuals.png --md >> report.md
+          echo "![](./feature_importance.png)" >> report.md
+          echo "![](./residuals.png)" >> report.md
           cml comment create report.md
