--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -14,6 +14,8 @@ jobs:
           pip install -r requirements.txt
           python train.py
       - name: Write CML report
+        env:
+          REPO_TOKEN: ${{ secrets.CML_GITHUB_ACCESS_TOKEN }}
         run: |
           echo "## MODEL METRICS" > report.md
           cat metrics.txt >> report.md
